--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<h2 class="question">What term refers to a mixture of butter and flour used in making a sauce?</h2>
 		</div>
 		<div class="answers">
-			<div class="row">
+			<!-- <div class="row">
 				<div class="qbox">
 					<div class="answerNumber">1</div>
 					<div class="answer">Compote</div>
@@ -31,8 +31,6 @@
 					<div class="answerNumber">2</div>
 					<div class="answer">Roux</div>
 				</div>
-			</div>
-			<div class="row">
 				<div class="qbox">
 					<div class="answerNumber">3</div>
 					<div class="answer">Doux</div>
@@ -41,7 +39,7 @@
 					<div class="answerNumber">4</div>
 					<div class="answer">Coulis</div>
 				</div>
-			</div>
+			</div> -->
 		</div>
 		<div class="summary">
 			<h2> You got 5 out of 10 questions correct</h2>
